shivani_vpc_pending/sg.tf
# Create Security Group
resource "aws_security_group" "shivani_sg" {
  vpc_id      = aws_vpc.shivani_vpc.id
  name        = "${var.vpc_name}-sg"
  description = "Allows the ssh, http incoming traffic"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "${var.vpc_name}-sg"
  }
}
